--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
+.gitignore
+.idea
 *.iml
-*.idea
-*/target/
-*.log*
+.classpath
+.project
+.settings/
+target/
+junit-report/
+dependency-reduced-pom.xml
+gen-java/
+vendor/
+.travis.yml
+*.pyc
+*.swp
+.git/arc/
+.git/modules/sdk/galaxy-sdk-java/arc/
+_book
+*.ipr
+*.iws
+.DS_Store
