--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,14 @@
     <packaging>jar</packaging>
 
     <properties>
-        <java.version>1.6</java.version>
+        <java.version>1.8</java.version>
         <scala.major.version>2.10</scala.major.version>
         <scala.version>2.10.2</scala.version>
         <spark.version>1.6.1-mdh1.6.1.2</spark.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hadoop.version>2.6.0</hadoop.version>
-        <hbase.version>0.94.11-mdh1.2.43.3</hbase.version>
-        <hbase-client.version>1.1.5.1</hbase-client.version>
+        <hbase.version>0.94.11-mdh1.2.42.29</hbase.version>
+        <infra-hbase-client.version>1.1.5.1</infra-hbase-client.version>
         <fds.version>1.16-SNAPSHOT</fds.version>
     </properties>
 
@@ -41,9 +41,9 @@
                 <version>${hbase.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.hbase</groupId>
+                <groupId>com.xiaomi.infra</groupId>
                 <artifactId>hbase-client</artifactId>
-                <version>${hbase.version}</version>
+                <version>${infra-hbase-client.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -145,7 +145,7 @@
         <dependency>
             <groupId>com.xiaomi.infra</groupId>
             <artifactId>hbase-client</artifactId>
-            <version>${hbase-client.version}</version>
+            <version>${infra-hbase-client.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.sun.jersey</groupId>
