--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,10 @@
           <groupId>javax.servlet</groupId>
           <artifactId>servlet-api</artifactId>
         </exclusion>
+        <exclusion>
+           <groupId>com.google.protobuf</groupId>
+           <artifactId>protobuf-java</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -206,54 +210,7 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>appassembler-maven-plugin</artifactId>
-        <version>1.3.1</version>
-        <executions>
-          <execution>
-            <id>make-assembly</id>
-            <phase>package</phase>
-            <goals>
-              <goal>create-repository</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <descriptors>
-            <descriptor>src/main/assembly/jar-with-dependencies.xml</descriptor>
-          </descriptors>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-          <repositoryLayout>flat</repositoryLayout>
-          <repositoryName>lib</repositoryName>
-          <assembleDirectory>
-            ${project.build.directory}/${project.artifactId}-${project.version}
-          </assembleDirectory>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.scala-tools</groupId>
-        <artifactId>maven-scala-plugin</artifactId>
-        <version>2.15.2</version>
-        <executions>
-          <execution>
-            <id>scala-compile-first</id>
-            <phase>process-resources</phase>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>scala-test-compile</id>
-            <phase>process-test-resources</phase>
-            <goals>
-              <goal>testCompile</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -270,6 +227,27 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.scala-tools</groupId>
+        <artifactId>maven-scala-plugin</artifactId>
+        <version>2.15.2</version>
+        <executions>
+        <execution>
+            <id>scala-compile-first</id>
+            <phase>process-resources</phase>
+            <goals>
+                <goal>compile</goal>
+            </goals>
+        </execution>
+        <execution>
+            <id>scala-test-compile</id>
+            <phase>process-test-resources</phase>
+            <goals>
+                <goal>testCompile</goal>
+            </goals>
+        </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.12</version>
@@ -283,78 +261,42 @@
           </includes>
         </configuration>
       </plugin>
-      <!--<plugin>-->
-        <!--<groupId>org.apache.maven.plugins</groupId>-->
-        <!--<artifactId>maven-antrun-plugin</artifactId>-->
-        <!--<executions>-->
-          <!--<execution>-->
-            <!--<id>tar</id>-->
-            <!--<phase>package</phase>-->
-            <!--<goals>-->
-              <!--<goal>run</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-              <!--<tasks>-->
-                <!--<echo file="${project.build.directory}/copynativelibs.sh">-->
-                  <!--run() {-->
-                  <!--echo "\$ ${@}"-->
-                  <!--"${@}"-->
-                  <!--res=$?-->
-                  <!--if [ $res != 0 ]; then-->
-                  <!--echo-->
-                  <!--echo "Failed!"-->
-                  <!--echo-->
-                  <!--exit $res-->
-                  <!--fi-->
-                  <!--}-->
-
-                  <!--ROOT=`cd ${basedir}/;pwd`-->
-                  <!--echo-->
-                  <!--echo "Current directory `pwd`"-->
-                  <!--echo-->
-                  <!--run rm -rf fds-cleaner-spark-${project.version}-->
-                  <!--run mkdir fds-cleaner-spark-${project.version}-->
-                  <!--run cd fds-cleaner-spark-${project.version}-->
-                  <!--run cp -r-->
-                  <!--$ROOT/target/galaxy-fds-spark-cleaner-${project.version}/lib .-->
-                  <!--run cp -r $ROOT/target/*.jar .-->
-                  <!--run rm -f ./lib/original-galaxy-fds-spark-cleaner-*.jar-->
-                  <!--echo "project version is: ${project.version}"-->
-
-                <!--</echo>-->
-                <!--<exec executable="sh" dir="${project.build.directory}"-->
-                      <!--failonerror="true">-->
-                  <!--<arg line="./copynativelibs.sh"/>-->
-                <!--</exec>-->
-                <!--<echo file="${project.build.directory}/maketar.sh">-->
-                  <!--run() {-->
-                  <!--echo "\$ ${@}"-->
-                  <!--"${@}"-->
-                  <!--res=$?-->
-                  <!--if [ $res != 0 ]; then-->
-                  <!--echo-->
-                  <!--echo "Failed!"-->
-                  <!--echo-->
-                  <!--exit $res-->
-                  <!--fi-->
-                  <!--}-->
-
-                  <!--run tar czf fds-cleaner-spark-${project.version}.tar.gz-->
-                  <!--fds-cleaner-spark-${project.version}-->
-                  <!--echo-->
-                  <!--echo "tar available at:-->
-                  <!--${project.build.directory}/fds-cleaner-spark-${project.version}.tar.gz"-->
-                  <!--echo-->
-                <!--</echo>-->
-                <!--<exec executable="sh" dir="${project.build.directory}"-->
-                      <!--failonerror="yes">-->
-                  <!--<arg line="./maketar.sh"/>-->
-                <!--</exec>-->
-              <!--</tasks>-->
-            <!--</configuration>-->
-          <!--</execution>-->
-        <!--</executions>-->
-      <!--</plugin>-->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>2.4.3</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <filters>
+                            <filter>
+                                <artifact>junit:junit</artifact>
+                                <includes>
+                                    <include>junit/framework/**</include>
+                                    <include>org/junit/**</include>
+                                </includes>
+                                <excludes>
+                                    <exclude>org/junit/experimental/**</exclude>
+                                    <exclude>org/junit/runners/**</exclude>
+                                </excludes>
+                            </filter>
+                            <filter>
+                                <artifact>*:*</artifact>
+                                <excludes>
+                                    <exclude>META-INF/*.SF</exclude>
+                                    <exclude>META-INF/*.DSA</exclude>
+                                    <exclude>META-INF/*.RSA</exclude>
+                                </excludes>
+                            </filter>
+                        </filters>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
   </build>
 </project>
